; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_serpent_generic.c_serpent_decrypt.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_serpent_generic.c_serpent_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.serpent_ctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_tfm*, i32*, i32*)* @serpent_decrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @serpent_decrypt(%struct.crypto_tfm* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.crypto_tfm*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.serpent_ctx*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.crypto_tfm*, %struct.crypto_tfm** %4, align 8
  %9 = call %struct.serpent_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %8)
  store %struct.serpent_ctx* %9, %struct.serpent_ctx** %7, align 8
  %10 = load %struct.serpent_ctx*, %struct.serpent_ctx** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @__serpent_decrypt(%struct.serpent_ctx* %10, i32* %11, i32* %12)
  ret void
}

declare dso_local %struct.serpent_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @__serpent_decrypt(%struct.serpent_ctx*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
